[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "NFDRS4Py"
version = "0.0.1"
description = "Python bindings for NFDRS4"
readme = "README.md"
requires-python = ">=3.12"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

